@@ -21,12 +21,17 @@ subprojects {
 
     java {
         toolchain {
-            languageVersion = JavaLanguageVersion.of(17)
+            languageVersion = JavaLanguageVersion.of(21)
         }
     }
 
     tasks.withType(JavaCompile) {
         options.encoding = 'UTF-8'
+        options.compilerArgs += ['-Xlint:deprecation', '-Xlint:unchecked']
+    }
+
+    test {
+        useJUnitPlatform()
     }
 }
 
@@ -47,12 +52,12 @@ project(':WorldPainter:WPCore') {
         implementation name: 'common-lang'
 
         implementation name: 'nashorn-core'
-        implementation 'org.slf4j:slf4j-api:1.7.36'
+        implementation 'org.slf4j:slf4j-api:2.0.9'
 
-        implementation name: 'guava'
-        implementation name: 'jackson-databind'
-        implementation name: 'jackson-core'
-        implementation name: 'jackson-annotations'
+        implementation 'com.google.guava:guava:33.0.0-jre'
+        implementation 'com.fasterxml.jackson.core:jackson-databind:2.16.1'
+        implementation 'com.fasterxml.jackson.core:jackson-core:2.16.1'
+        implementation 'com.fasterxml.jackson.core:jackson-annotations:2.16.1'
 
         compileOnly 'org.jetbrains:annotations:24.0.1'
 
@@ -60,7 +65,9 @@ project(':WorldPainter:WPCore') {
         annotationProcessor 'org.projectlombok:lombok:1.18.30'
 
         testImplementation 'junit:junit:4.13.2'
-        testImplementation 'org.slf4j:slf4j-simple:1.7.36'
+        testImplementation 'org.junit.jupiter:junit-jupiter:5.10.1'
+        testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.10.1'
+        testImplementation 'org.slf4j:slf4j-simple:2.0.9'
     }
 
     test {
@@ -93,16 +100,16 @@ project(':WorldPainter:WPDynmapPreviewer') {
         // Transitive dependencies that might not be visible from WPCore because of 'implementation'
         implementation name: 'Utils'
         implementation name: 'SwingUtils'
-        implementation name: 'guava'
-        implementation name: 'jackson-databind'
+        implementation 'com.google.guava:guava:33.0.0-jre'
+        implementation 'com.fasterxml.jackson.core:jackson-databind:2.16.1'
         implementation name: 'vecmath'
 
-        implementation 'org.yaml:snakeyaml:2.0'
+        implementation 'org.yaml:snakeyaml:2.2'
         implementation('com.googlecode.json-simple:json-simple:1.1.1') {
             exclude group: 'junit', module: 'junit'
         }
-        implementation 'org.slf4j:slf4j-api:1.7.36'
-        implementation 'org.slf4j:jul-to-slf4j:1.7.36'
+        implementation 'org.slf4j:slf4j-api:2.0.9'
+        implementation 'org.slf4j:jul-to-slf4j:2.0.9'
     }
 }
 
@@ -112,6 +119,12 @@ project(':WorldPainter:WPGUI') {
     application {
         mainClass = 'org.pepsoft.worldpainter.Main'
         applicationName = 'WorldPainter'
+        applicationDefaultJvmArgs = [
+            '--add-exports=java.desktop/sun.swing=ALL-UNNAMED',
+            '--add-opens=java.desktop/javax.swing=ALL-UNNAMED',
+            '--add-opens=java.desktop/sun.awt=ALL-UNNAMED',
+            '-Djava.awt.headless=false'
+        ]
     }
 
     dependencies {
@@ -131,32 +144,32 @@ project(':WorldPainter:WPGUI') {
 
         // Nashorn needed for scripting tests in WPGUI
         implementation name: 'nashorn-core'
-        implementation name: 'asm' // Nashorn dependency
-        implementation name: 'asm-util' // Nashorn dependency
-        implementation name: 'asm-tree' // Nashorn dependency
-        implementation name: 'asm-commons' // Nashorn dependency
-        implementation name: 'asm-analysis' // Nashorn dependency
+        implementation name: 'asm'
+        implementation name: 'asm-util'
+        implementation name: 'asm-tree'
+        implementation name: 'asm-commons'
+        implementation name: 'asm-analysis'
 
 
-        implementation 'org.slf4j:slf4j-api:1.7.36'
-        implementation 'ch.qos.logback:logback-classic:1.2.11'
-        implementation 'org.slf4j:jcl-over-slf4j:1.7.36'
-        implementation 'org.slf4j:jul-to-slf4j:1.7.36'
-        runtimeOnly 'org.apache.logging.log4j:log4j-to-slf4j:2.17.2'
+        implementation 'org.slf4j:slf4j-api:2.0.9'
+        implementation 'ch.qos.logback:logback-classic:1.4.14'
+        implementation 'org.slf4j:jcl-over-slf4j:2.0.9'
+        implementation 'org.slf4j:jul-to-slf4j:2.0.9'
+        runtimeOnly 'org.apache.logging.log4j:log4j-to-slf4j:2.21.1'
 
-        implementation name: 'guava'
-        implementation name: 'jackson-databind'
+        implementation 'com.google.guava:guava:33.0.0-jre'
+        implementation 'com.fasterxml.jackson.core:jackson-databind:2.16.1'
 
         compileOnly 'org.jetbrains:annotations:24.0.1'
 
         testImplementation 'junit:junit:4.13.2'
+        testImplementation 'org.junit.jupiter:junit-jupiter:5.10.1'
+        testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.10.1'
     }
 
     // Configure tests to fork every time to avoid singleton initialization issues
     test {
         forkEvery = 1
-        // Also need to set working directory to root project dir for tests that look for files
-        // script tests look for generated files in ".", which might be the project dir
     }
 
     startScripts {
